# vello

./: Cargo.toml
crates/atomic_lookback_prefix/: Cargo.toml
crates/atomic_lookback_prefix/src/: main.rs  prefix_sum.wgsl
examples/headless/src/: main.rs
examples/scenes/: Cargo.toml
examples/scenes/src/: lib.rs  test_scenes.rs
examples/with_bevy/src/: main.rs
examples/with_winit/: Cargo.toml
examples/with_winit/src/: lib.rs  main.rs
shader/: fine.wgsl  old_fine.wgsl
shader/shared/: config.wgsl  pathtag.wgsl
src/: engine.rs  lib.rs  render.rs  shaders.rs  util.rs  wgpu_engine.rs
vello/src/: scene.rs
vello_encoding/src/: encoding.rs
vello_tests/tests/: regression.rs
